Overall CSS & HTML

--- a/src/app/location-comments-modal/location-comments-modal.component.html
+++ b/src/app/location-comments-modal/location-comments-modal.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons class="disabled" slot="start">
-      <ion-button [disabled]="true">
+      <ion-button [disabled]="true" class="personailze-button">
         <ion-icon name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
