--- a/src/app/locations/locations.page.html
+++ b/src/app/locations/locations.page.html
@@ -4,7 +4,7 @@
 
     <ion-buttons class="disabled" slot="start">
       <ion-button [disabled]="true">
-        <ion-icon name="square"></ion-icon>
+        <ion-icon slot="icon-only" name="add-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
 
