--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -1,9 +1,10 @@
+
 <ion-header [translucent]="true">
   <ion-toolbar>
 
     <ion-buttons class="disabled" slot="start">
       <ion-button [disabled]="true">
-        <ion-icon name="square"></ion-icon>
+        <ion-icon slot="icon-only" name="add-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
 
@@ -11,7 +12,7 @@
       <b>PROFILE</b>
     </ion-title>
 
-    <ion-buttons class="disabled" slot="end">
+    <ion-buttons class="disabled-r" slot="end">
       <ion-button [disabled]="true">
         <ion-icon slot="icon-only" name="add-outline"></ion-icon>
       </ion-button>
