--- a/src/app/travel-form-modal/travel-form-modal.component.html
+++ b/src/app/travel-form-modal/travel-form-modal.component.html
@@ -1,7 +1,9 @@
+
 <ion-header>
   <ion-toolbar>
+
     <ion-buttons class="disabled" slot="start">
-      <ion-button [disabled]="true">
+      <ion-button [disabled]="true" class="personalize-button">
         <ion-icon name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -13,6 +15,7 @@
         <ion-icon name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
