--- a/src/app/filter-modal/filter-modal.component.scss
+++ b/src/app/filter-modal/filter-modal.component.scss
@@ -61,3 +61,9 @@
 .apply-btn {
     color: #FB9224 !important;
 }
+
+.disabled {
+    background-color: #ffffff;
+    color: #ffffff;
+    border-radius: 50%;
+}
