--- a/src/app/notifications/notifications.page.scss
+++ b/src/app/notifications/notifications.page.scss
@@ -19,6 +19,13 @@
   border-radius: 50%;
   margin: 10px 5px 10px 20px;
 }
+
+.disabled-r {
+  background-color: #ffffff;
+  color: #ffffff;
+  border-radius: 50%;
+  margin: 10px 20px 10px 5px;
+}
   
 @keyframes slide-in {
     from {
