--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -132,3 +132,11 @@ ion-button.continueButton::part(native) {
     border-radius: 50%; 
     margin: 10px 5px 10px 20px;
 }
+
+.disabled-r {
+    background-color: #ffffff;
+    color: #ffffff;
+    border-radius: 50%;
+    margin: 10px 20px 10px 5px;
+}
+    
