--- a/src/app/profile/signup/signup.page.html
+++ b/src/app/profile/signup/signup.page.html
@@ -1,8 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+
+    <ion-buttons class="disabled" slot="start">
+      <ion-button [disabled]="true">
+        <ion-icon slot="icon-only" name="add-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
     <ion-title class="centered-title">
       <b>PROFILE</b>
     </ion-title>
+
+    <ion-buttons class="disabled-r" slot="end">
+      <ion-button [disabled]="true">
+        <ion-icon slot="icon-only" name="add-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
