--- a/src/app/profile/signup/signup.page.scss
+++ b/src/app/profile/signup/signup.page.scss
@@ -126,3 +126,16 @@ ion-button.continueButton::part(native) {
   font-weight: 500;
 }
 
+.disabled {
+    background-color: #ffffff;
+    color: #ffffff;
+    border-radius: 50%;
+    margin: 10px 5px 10px 20px;
+}
+
+.disabled-r {
+    background-color: #ffffff;
+    color: #ffffff;
+    border-radius: 50%;
+    margin: 10px 20px 10px 5px;
+}
