--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -8,9 +8,7 @@
       </ion-button>
     </ion-buttons>
 
-    <ion-title class="centered-title">
-      <b>PROFILE</b>
-    </ion-title>
+    <ion-title class="centered-title"><b>PROFILE</b></ion-title>
 
     <ion-buttons class="disabled-r" slot="end">
       <ion-button [disabled]="true">
@@ -24,6 +22,7 @@
 <ion-content [fullscreen]="true">
   <div class="flex-center">
     <ion-card class="no-shadow">
+
       <ion-card-header>
         <ion-card-title><b>Sign in</b></ion-card-title>
       </ion-card-header>
@@ -36,7 +35,8 @@
             type="email"
             class="circular-input"
             clear-input
-          ></ion-input>
+            >
+          </ion-input>
         </div>
 
         <div class="input-container">
@@ -46,22 +46,22 @@
             type="password"
             class="circular-input"
             clear-input
-          ></ion-input>
+            >
+          </ion-input>
         </div>
 
         <div>
           <ion-button expand="block" class="continueButton">Continue</ion-button>
         </div>
         
-        <!-- Separator -->
         <div class="separator">
           <div class="line"></div>
           <span class="or-text">Or continue with</span>
           <div class="line"></div>
         </div>
 
-        <!-- Social Login Buttons -->
         <div class="button-container">
+
           <ion-button expand="block" class="google-button">
             <ion-icon slot="start" src="../../assets/icon/Google Logo.svg"></ion-icon>
             Continue with Google
@@ -71,10 +71,12 @@
             <ion-icon slot="start" name="logo-facebook"></ion-icon>
             Continue with Facebook
           </ion-button>
+
           <ion-router-link [routerLink]="['signup']" class="flexed-text">Sign up</ion-router-link> 
-          <!-- NUNCA pôr / antes do path  (^aqui^)  senão os tabs deixam de aparecer-->
+
         </div>
       </ion-card-content>
+
     </ion-card>
   </div>
 </ion-content>
