--- a/src/app/filter-modal/filter-modal.component.scss
+++ b/src/app/filter-modal/filter-modal.component.scss
@@ -1,15 +1,16 @@
+
 .personalize-button ion-icon {
-    font-size: 32px;
+    font-size: 2rem;
 }
 
 .dateLabel {
-    font-size: 21px;
+    font-size: 1.313rem;
     margin-top: -8px;
     margin-bottom: 8px;
 }
 
 .forTitleLabel {
-    font-size: 22px;  
+    font-size: 1.375rem;  
     margin: 50px 0px 50px 0px;
 }
 
@@ -18,7 +19,7 @@
 }
 
 .dropLabel {
-    font-size: 21px;
+    font-size: 1.313rem;
     margin-top: -8px;
 }
 
@@ -50,7 +51,7 @@
 }
 
 .tripButton { 
-    font-size: 32px !important;
+    font-size: 2rem !important;
     margin: 10px 50px 10px 50px;
 }
 
