--- a/src/app/location-comments-modal/location-comments-modal.component.html
+++ b/src/app/location-comments-modal/location-comments-modal.component.html
@@ -1,5 +1,7 @@
+
 <ion-header>
   <ion-toolbar>
+
     <ion-buttons class="disabled" slot="start">
       <ion-button [disabled]="true" class="personailze-button">
         <ion-icon name="close"></ion-icon>
@@ -13,6 +15,7 @@
         <ion-icon name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
@@ -22,7 +25,7 @@
       <ion-item *ngFor="let comment of comments">
         
         <ion-label>
-          <p><b>{{ comment.createdBy }}</b></p>
+          <p class="comment-createdBy"><b>{{ comment.createdBy }}</b></p>
           <p class="comment-date">{{ comment.createdAt | date: 'dd/MM/yy - HH:mm\'h\'' }}</p>
           <p>{{ comment.comment }}</p>
         </ion-label>
@@ -41,10 +44,10 @@
     <h3>No Notes Available.</h3>
   </ion-text>
 
-    <!-- FAB to Add Comment -->
     <ion-fab vertical="bottom" horizontal="end" slot="fixed" class="fab-custom-size">
       <ion-fab-button (click)="openAddLocCommentModal()" class="fab-custom">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
     </ion-fab>
+
 </ion-content>
