--- a/src/app/locations/locations.page.scss
+++ b/src/app/locations/locations.page.scss
@@ -1,5 +1,4 @@
 
-/* Header */
 .centered-title {
   text-align: center;
   color: #000000;
@@ -40,7 +39,6 @@
   background-color: #000000;  
 }
 
-/* Inline Container */
 .inline-container {
   display: flex;
   flex-wrap: wrap;
@@ -55,7 +53,6 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* Buttons Box (Optional Styling for Groups) */
 .button-box {
   display: flex;
   flex-wrap: wrap;
@@ -70,10 +67,9 @@
   min-width: 100%;
 }
 
-/* Priority Labels */
 .priority-css {
 
-  font-size: 22px;
+  font-size: 1.375rem;
   font-weight: 500;
   color: #000000;
   flex: 1 1 auto;
@@ -81,7 +77,6 @@
   margin: 0;
 }
 
-/* Priority Backgrounds */
 .low-priority {
   background: linear-gradient(to top, #2ad208 0%, #ffffff 20%);
   padding: 10px;
@@ -103,7 +98,6 @@
   border: none;
 }
 
-/* Buttons */
 .personalize-button {
   color: #FB9224;
   padding: 8px 22px;
@@ -116,7 +110,7 @@
 }
 
 .personalize-button ion-icon {
-  font-size: 32px;
+  font-size: 2rem;
 }
 
 .fab-custom-size {
@@ -130,7 +124,7 @@
 
 .fab-custom ion-icon {
   padding: 0px;
-  font-size: 30px;
+  font-size: 1.875rem;
   --box-shadow: 0 !important;
 }
 
@@ -142,7 +136,7 @@
 
 .desc-width p {
   color: #000000 !important;
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 900;
   text-transform: uppercase;
 }
@@ -167,7 +161,6 @@
   justify-content: center;
 }
 
-/* Card Styles */
 ion-card {
   --background: #ffffff;
   margin: 10px 0;
@@ -179,7 +172,9 @@ ion-card-content {
   padding: 10px 15px;
 }
 
-/* Responsive Design */
+/* ---------------------------------------------------------------------------------- */
+/* Responsive Media */
+/* ---------------------------------------------------------------------------------- */
 @media screen and (max-width: 498px) 
 {
   .outlineCard {
@@ -202,11 +197,11 @@ ion-card-content {
   }
 
   .priority-css {
-    font-size: 12px;
+    font-size: 0.75rem;
   }
 
   .priority-css p {
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   .personalize-button {
@@ -214,7 +209,7 @@ ion-card-content {
   }
 
   .personalize-button ion-icon {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   .fab-custom-size {
