--- a/src/app/profile/profile.page.scss
+++ b/src/app/profile/profile.page.scss
@@ -1,3 +1,4 @@
+
 .centered-title {
     text-align: center;
     color: black;
@@ -38,14 +39,14 @@
 }
 
 .input-icon {
-    font-size: 20px; 
+    font-size: 1.25rem; 
     color: #8e8e93; 
     margin-right: 8px; 
 }
 
 .circular-input {
     flex: 1; 
-    font-size: 16px;
+    font-size: 1rem;
     background: transparent; 
     border: none;
     outline: none;
@@ -65,7 +66,7 @@
     --background-hover: #ffffff;
     --color: white;
     --border-radius: 20px; 
-    font-size: 16px; 
+    font-size: 1rem; 
     width: 100%; 
     margin: 10px auto; 
 }
@@ -86,7 +87,7 @@
 .or-text {
     margin: 0 12px;
     color: #000000; 
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 400; 
 }
   
@@ -96,11 +97,10 @@
     gap: 12px;
 }
 
-
 .google-button {
     --background: #ffffff;
     --color: #7a7a7a;
-    font-size: 16px;
+    font-size: 1rem;
     --padding-start: 16px;
     --border-radius: 8px; 
 }
@@ -108,7 +108,7 @@
 .facebook-button {
     --background: #1877f2;
     --color: #ffffff;
-    font-size: 16px;
+    font-size: 1rem;
     --padding-start: 16px;
     --border-radius: 8px; 
 }
@@ -139,4 +139,3 @@ ion-button.continueButton::part(native) {
     border-radius: 50%;
     margin: 10px 20px 10px 5px;
 }
-    
