--- a/src/app/profile/signup/signup.page.html
+++ b/src/app/profile/signup/signup.page.html
@@ -1,3 +1,4 @@
+
 <ion-header [translucent]="true">
   <ion-toolbar>
 
@@ -7,9 +8,7 @@
       </ion-button>
     </ion-buttons>
 
-    <ion-title class="centered-title">
-      <b>PROFILE</b>
-    </ion-title>
+    <ion-title class="centered-title"><b>PROFILE</b></ion-title>
 
     <ion-buttons class="disabled-r" slot="end">
       <ion-button [disabled]="true">
@@ -23,11 +22,13 @@
 <ion-content [fullscreen]="true">
   <div class="flex-center">
     <ion-card class="no-shadow">
+
       <ion-card-header>
         <ion-card-title><b>Sign up</b></ion-card-title>
       </ion-card-header>
     
       <ion-card-content>
+
         <div class="input-container">
           <ion-icon name="mail-outline" class="input-icon"></ion-icon>
           <ion-input
@@ -35,8 +36,10 @@
             type="email"
             class="circular-input"
             clear-input
-          ></ion-input>
+            >
+          </ion-input>
         </div>
+
         <div class="input-container">
           <ion-icon name="lock-closed-outline" class="input-icon"></ion-icon>
           <ion-input
@@ -44,8 +47,10 @@
             type="password"
             class="circular-input"
             clear-input
-          ></ion-input>
+            >
+          </ion-input>
         </div>
+
         <div class="input-container">
           <ion-icon name="lock-closed-outline" class="input-icon"></ion-icon>
           <ion-input
@@ -53,20 +58,22 @@
             type="password"
             class="circular-input"
             clear-input
-          ></ion-input>
+            >
+          </ion-input>
         </div>
+
         <div>
           <ion-button expand="block" class="continueButton">Continue</ion-button>
         </div>
-          <!-- Separator -->
+
         <div class="separator">
           <div class="line"></div>
           <span class="or-text">Or continue with</span>
           <div class="line"></div>
         </div>
 
-        <!-- Social Login Buttons -->
         <div class="button-container">
+
           <ion-button expand="block" class="google-button">
             <ion-icon slot="start" src="../../assets/icon/Google Logo.svg"></ion-icon>
             Continue with Google
@@ -76,10 +83,13 @@
             <ion-icon slot="start" name="logo-facebook"></ion-icon>
             Continue with Facebook
           </ion-button>
+
           <ion-router-link [routerLink]="['/tabs/profile']" class="flexed-text">Back to sign in</ion-router-link>
-          <!-- NUNCA tirar o / antes do 'tabs/config' senão o href deixa de funcionar. -->
+
         </div>
+        
       </ion-card-content>
+
     </ion-card>
   </div>
 </ion-content>
