--- a/src/app/travel-comments-modal/travel-comments-modal.component.html
+++ b/src/app/travel-comments-modal/travel-comments-modal.component.html
@@ -25,7 +25,7 @@
       <ion-item *ngFor="let comment of comments">
 
         <ion-label>
-          <p><b>{{ comment.createdBy }}</b></p>
+          <p class="comment-createdBy"><b>{{ comment.createdBy }}</b></p>
           <p class="comment-date">{{ comment.createdAt | date: 'dd/MM/yy - HH:mm\'h\'' }}</p>
           <p>{{ comment.comment }}</p>
         </ion-label>
@@ -44,10 +44,10 @@
     <h3>No Notes Available.</h3>
   </ion-text>
 
-    <!-- FAB to Add Comment -->
     <ion-fab vertical="bottom" horizontal="end" slot="fixed" class="fab-custom-size">
       <ion-fab-button (click)="openAddCommentModal()" class="fab-custom">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
     </ion-fab>
+
 </ion-content>
