--- a/src/app/travel-form-modal/travel-form-modal.component.scss
+++ b/src/app/travel-form-modal/travel-form-modal.component.scss
@@ -1,20 +1,21 @@
+
 .personalize-button ion-icon {
-    font-size: 32px;
+    font-size: 2rem;
 }
 
 .dateLabel {
-    font-size: 21px;
+    font-size: 1.313rem;
     margin-top: -8px;
     margin-bottom: 8px;
 }
 
 .forTitleLabel {
-    font-size: 22px;
+    font-size: 1.375rem;
     margin-bottom: -2px;
 }
 
 .dropLabel {
-    font-size: 21px;
+    font-size: 1.313rem;
     margin-top: -8px;
 }
 
