--- a/src/app/trips/trips.page.scss
+++ b/src/app/trips/trips.page.scss
@@ -1,10 +1,3 @@
-/*.button-container {
-    display: flex;
-    justify-content: center;  /* Horizontally center the button */
-    /*align-items: center;      /* Vertically center the button */
-    /*height: 100%;             /* Ensure the content takes up full height */
-    /*background: linear-gradient(to bottom, #FFFFFF, #FAFAFA);
-}*/
 
 .centered-title {
     text-align: center;
@@ -96,7 +89,7 @@
 }
 
 .personalize-button ion-icon {
-    font-size: 32px;
+    font-size: 2rem;
 }
 
 .fab-custom-size {
@@ -110,7 +103,7 @@
 
 .fab-custom ion-icon {
     padding: 0px;
-    font-size: 30px;
+    font-size: 1.875rem;
     --box-shadow: 0 !important;
 }
 
@@ -148,6 +141,9 @@
     height: 100%
 }
 
+/* ---------------------------------------------------------------------------------- */
+/* Responsive Media */
+/* ---------------------------------------------------------------------------------- */
 @media screen and (max-width: 498px) 
 { 
     .outlineCard {
@@ -164,6 +160,14 @@
     .inline-container {
         display: flex;
         flex-direction: column;
+        gap: 10px;
+        max-width: 100%;
+        margin-bottom: 10px;
+    }
+    
+    .inline-container p {
+        margin: 0;
+        padding: 8px;
     }
     
     .personalize-button {
@@ -172,21 +176,10 @@
     }
 
     .personalize-button ion-icon {
-        font-size: 28px;
+        font-size: 1.75rem;
     }
 
     .fab-custom-size {
         right: -8px !important;
-    }
-
-    .inline-container {
-        gap: 10px;
-        max-width: 100%;
-        margin-bottom: 10px;
-    }
-
-    .inline-container p {
-        margin: 0;
-        padding: 8px;
     }
 }
