Organize Code (FINAL)

--- a/src/app/location-modal/location-modal.component.html
+++ b/src/app/location-modal/location-modal.component.html
@@ -22,7 +22,7 @@
 <ion-content>
 
   <ion-item>
-    <ion-label class="forTitleLabel" position="stacked">Name</ion-label>
+    <ion-label class="forTitleLabel" position="stacked">Name *</ion-label>
     <ion-textarea [(ngModel)]="location.description" name="description"></ion-textarea>
   </ion-item>
 
