--- a/src/app/profile/signup/signup.page.html
+++ b/src/app/profile/signup/signup.page.html
@@ -32,7 +32,7 @@
         <div class="input-container">
           <ion-icon name="mail-outline" class="input-icon"></ion-icon>
           <ion-input
-            placeholder="Enter e-mail address"
+            placeholder="Enter e-mail"
             type="email"
             class="circular-input"
             clear-input
