--- a/src/app/travel-form-modal/travel-form-modal.component.html
+++ b/src/app/travel-form-modal/travel-form-modal.component.html
@@ -23,7 +23,7 @@
   <form *ngIf="actionType === 'POST' || actionType === 'PUT'">
 
     <ion-item>
-      <ion-label class="forTitleLabel" position="stacked">Title</ion-label>
+      <ion-label class="forTitleLabel" position="stacked">Title *</ion-label>
       <ion-input [(ngModel)]="travel.description" name="description"></ion-input>
     </ion-item>
 
@@ -75,18 +75,5 @@
       </ion-button>
     </ion-footer>
   </form>
-
-  <div class="deletePrompt" *ngIf="actionType === 'DELETE'">
-
-    <ion-text color="danger">
-      <h2>Are you sure you want to delete this trip?</h2>
-    </ion-text>
-
-    <ion-footer>
-      <ion-button expand="full" color="danger" (click)="confirmDelete()">Delete</ion-button>
-      <ion-button expand="full" (click)="dismiss()">Cancel</ion-button>
-    </ion-footer>
-    
-  </div>
 
 </ion-content>
